[gd_scene load_steps=15 format=2]

[ext_resource path="res://Light/LightDifuse.png" type="Texture" id=1]
[ext_resource path="res://World/grave_name1.png" type="Texture" id=2]
[ext_resource path="res://World/grave_name2.png" type="Texture" id=3]
[ext_resource path="res://Tasks/GraveName/GraveName.gd" type="Script" id=4]
[ext_resource path="res://OutlineShader.gdshader" type="Shader" id=5]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=6]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true
shader_param/on = false

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "done",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "not done",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.0
height = 30.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.490196, 0.490196, 0.490196, 0.188235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hide_panel"
} ]
}

[node name="GraveName" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
frames = SubResource( 1 )
animation = "not done"

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 14 )
enabled = false
texture = ExtResource( 1 )
texture_scale = 0.02

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -56.0
margin_top = -32.0
margin_right = 56.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Panel"]
margin_right = 112.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "RIP Nartynea - Friends wanted to open a store in her house. 'Over my dead body!' she said"
align = 1
valign = 1
autowrap = true

[node name="TextAnimation" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
